# Virgil

./: .clangd  .gitignore  Command Example.json  Error Example.json  Information Message.json  LICENSE  Overview.md  README.md  Status Request.json  Status Update.json  udp_sniffer.cpp
CppExamples/: MasterExample.cpp  SlaveExample.cpp  VirgilNet.cpp  VirgilNet.hpp
Cpp_lib/: VirgilLib.hpp
Example JSON/: ConnectCommand.jsonc  ErrorResponse.jsonc  ParameterCommand.jsonc  ParameterRequest 1.jsonc  ParameterRequest 2.jsonc  ParameterRequest 3.jsonc  ParameterResponse 1.jsonc  ParameterResponse 2.jsonc  ParameterResponse 3.jsonc  StatusRequest.jsonc  StatusUpdate.jsonc  channelLink 1.jsonc  channelLink 2.jsonc  channelUnlink 1.jsonc  channelUnlink 2.jsonc  endResponse.jsonc  infoRequest 1.jsonc  infoRequest 2.jsonc  infoResponse 1.jsonc  infoResponse 2.jsonc  statusRequest.jsonc  subscribeMessage.jsonc  unsubscribeMessage.jsonc
Master Example/: Master.cpp
Master_Example/: CMakeLists.txt  Master.cpp  tempCodeRunnerFile.cpp
Master_Example/nuklear/: README_LOCAL.txt
Python Examples/: Example.py  Main.py  Mixer.config  NoGuiMain.py  Spectera.config  Variables.py  requirements.txt  tempCodeRunnerFile.py
Python Examples/.linuxVenv/: pyvenv.cfg
Python Examples/.windowsVenv/Scripts/: activate  activate.bat
Slave_Example/: CMakeLists.txt  Slave.cpp
Slave_Tester/: CMakeLists.txt  Slave.cpp
